--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 
 <!-- Austin Meier -->
-<!-- Created: 05/20/2021 -->
-<!-- Last Updated: 03/01/2023 -->
+<!-- If you are inspecting the source, I respect you, but this is also an ancient website. Please no judge -->
 
 	<head>
 		<meta charset="UTF-8">
@@ -88,7 +87,7 @@
 
 				<div class="section-title">
 					<h2>About</h2>
-					<p>I am a passionate, self-driven professional that is always looking for new opportunities that allow me to grow both personally and professionally. I have a fascination with technology and problem solving.</p>
+					<p>I am a passionate, self-driven professional who is always looking for new opportunities that allow me to learn and grow. I have a fascination with technology and problem-solving.</p>
 				</div>
 
 				<div class="row">
@@ -138,21 +137,21 @@
 				<div class="row skills-content">
 					<div class="col-lg-6" data-aos="fade-up">
 						<div class="progress">
-							<span class="skill">Python (+FastAPI +PyTorch)<i class="val">100%</i></span>
+							<span class="skill">JavaScript/TypeScript<i class="val">100%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
 						</div>
 
             <div class="progress">
-							<span class="skill">JavaScript/TypeScript <i class="val">85%</i></span>
+							<span class="skill">PHP <i class="val">85%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
 						</div>
 
 						<div class="progress">
-							<span class="skill">Clojure (and functional paradigm)<i class="val">60%</i></span>
+							<span class="skill">Clojure <i class="val">60%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
@@ -191,7 +190,7 @@
 						</div>
 
             <div class="progress">
-							<span class="skill">Google Cloud Platform<i class="val">70%</i></span>
+							<span class="skill">AWS <i class="val">70%</i></span>
 							<div class="progress-bar-wrap">
 								<div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
 							</div>
@@ -200,7 +199,7 @@
 					</div>
 				<div class="section-title">
 					<h2>Contracting Skills</h2>
-					<p>As an independent contractor, I gained valuable experience and problem solving skills. in a multitude of different fields. I am always learning, but listed below are the fields that I have the most experience and confidence with</p>
+					<p>As an independent contractor, I gained valuable experience and problem-solving skills. in a multitude of different fields. I am always learning, but listed below are the fields that I have the most experience and confidence with</p>
 				</div>
 
 				<div class="row skills-content">
@@ -283,7 +282,7 @@
               <h4>Bachelor of Computer Science - Incomplete</h4>
               <h5>2018 - 2019</h5>
               <p><em>Univeristy of South Carolina, Columbia, SC</em></p>
-              <p>My degree was unfortunately paused due to lack of financial support and desire to gain business experience. </p>
+              <p>My degree was unfortunately paused due to a lack of financial support and a desire to gain business experience. </p>
             </div>
             <div class="resume-item">
               <h4>High School Diploma</h4>
@@ -331,9 +330,21 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+	    <div class="resume-item">
+              <h4>JAM Plus</h4>
+              <h5>Aug 23' - Present</h5>
+              <p><em>Denver, CO</em></p>
+              <ul>
+                <li>Full-Stack Software Developer maintaining a custom JavaScript front-end designer</li>
+                <li>PHP Magento2 developer developing and maintaining solutions for a multi-front e-commerce setup</li>
+                <li>NetSuite custom integration and data management</li>
+                <li>Manage/Design product die-line formats in Adobe Illustrator</li>
+                <li>Construct a system to facilitate the delivery of print-ready color-accurate PDF files in multiple vendor formats</li>
+              </ul>
+            </div>
             <div class="resume-item">
               <h4>CHILI Publish</h4>
-              <h5>March 22 - Present</h5>
+              <h5>March 22' - Aug 23'</h5>
               <p><em>Denver, CO</em></p>
               <ul>
                 <li>Ensure clients are successful with their integration and development with the CHILI Publisher application.</li>
@@ -356,7 +367,7 @@
             </div>
             <div class="resume-item">
               <h4>WillScot</h4>
-              <h5>2019 - Present</h5>
+              <h5>2019 - 2021</h5>
               <p><em>Columbia, SC</em></p>
               <ul>
                 <li>Facilitate the repair and maintenance of customer office buildings in the South Carolina area in commercial and military environments. Repairs include flooring, roofing, electrical, plumbing, and minor HVAC work. Work contracted through AM Solutions LLC.</li>
@@ -603,13 +614,13 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>West Highlands - Denver, Colorado 80212</p>
+                <p>Wheat Ridge - Denver, Colorado 80212</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>austin@amsolutionssc.com</p>
+                <p>austin.meier@hotmail.com</p>
               </div>
 
               <div class="phone">
