--- a/index.html
+++ b/index.html
@@ -335,8 +335,9 @@
               <h5>Aug 23' - Present</h5>
               <p><em>Denver, CO</em></p>
               <ul>
-                <li>Full-Stack Software Developer maintaining a custom JavaScript front-end designer</li>
-                <li>PHP Magento2 developer developing and maintaining solutions for a multi-front e-commerce setup</li>
+                <li>Full-Stack Software Developer</li>
+		<li>Developing a custom JavaScript front-end solution for color and font-accurate custom product designs</li>
+                <li>PHP Magento2 developer maintaining solutions for a multi-front e-commerce setup</li>
                 <li>NetSuite custom integration and data management</li>
                 <li>Manage/Design product die-line formats in Adobe Illustrator</li>
                 <li>Construct a system to facilitate the delivery of print-ready color-accurate PDF files in multiple vendor formats</li>
