contact details update

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Please use this form or my email address listed below to get in contact with me. I will always try to respond as soon as possible. Thank you for visiting and taking the time to look through my portfolio.</p>
+          <p>Feel free to contact me using my email below or on one of my social medias listed on the left bar!</p>
         </div>
 
         <div class="row" data-aos="fade-in">
