update jam+ role info

--- a/index.html
+++ b/index.html
@@ -306,11 +306,10 @@
               <p><em>Denver, CO</em></p>
               <ul>
                 <li>Full-Stack Software Developer</li>
-		<li>Developing a custom JavaScript front-end solution for color and font-accurate custom product designs</li>
+		            <li>Develop and maintain a TypeScript React frontend compatible with Magento2</li>
                 <li>PHP Magento2 developer maintaining solutions for a multi-front e-commerce setup</li>
-                <li>NetSuite custom integration and data management</li>
-                <li>Manage/Design product die-line formats in Adobe Illustrator</li>
-                <li>Construct a system to facilitate the delivery of print-ready color-accurate PDF files in multiple vendor formats</li>
+                <li>NetSuite Data Management and Integration</li>
+                <li>Maintain a system to facilitate the delivery of print-ready color-accurate PDF files in multiple vendor formats</li>
               </ul>
             </div>
             <div class="resume-item">
